--- a/mlefrontend/src/Homepage/landingpage.css
+++ b/mlefrontend/src/Homepage/landingpage.css
@@ -1,27 +1,28 @@
 .headerLanding {
   overflow: hidden;
+  display: flex;
+  justify-content: space-between;
   background-color: #0047ab;
 }
 .logo {
-  float: left;
+  /* float: left; */
   margin-left: 100px;
+}
+.about-us {
+  height: 49rem;
+}
+.our-products {
+  height: 40rem;
 }
 
 .headerLanding a {
   float: left;
   color: #fff;
   text-align: center;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: bold;
-  line-height: 25px;
-  border-radius: 4px;
-}
 
-.headerLanding a.logo {
-  font-size: 25px;
-  font-weight: bold;
+  text-decoration: none;
+  font-size: 1.5rem;
+  border-radius: 4px;
 }
 
 .headerLanding a:hover {
@@ -35,19 +36,44 @@
 }
 
 .headerLanding-right {
-  float: right;
-  margin-right: 150px;
+  width: 50%;
+  /* float: right;
+  margin-right: 150px; */
+  display: flex;
+  justify-content: space-around;
+}
+.card-slider {
+  height: 35rem;
 }
 
-@media screen and (max-width: 500px) {
-  .headerLanding a {
-    float: none;
-    display: block;
-    text-align: left;
+@media screen and (max-width: 400px) {
+  .card-slider {
+    height: 12rem;
+  }
+  .about-us {
+    height: 49rem;
+  }
+  .our-products {
+    height: 98rem;
+  }
+  .headerLanding {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
+  .headerLanding a {
+    float: left;
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1.5rem;
+    border-radius: 4px;
+  }
   .headerLanding-right {
-    float: none;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
   }
 }
 .navbar-nav {
