--- a/mlefrontend/src/Homepage/landingpage.css
+++ b/mlefrontend/src/Homepage/landingpage.css
@@ -208,3 +208,27 @@
 .btn {
   background-color: #0047ab;
 }
+
+@media screen and (max-width:602px) {
+  #about-link{
+    display: inline !important;
+    padding: 10px 0;
+  }
+}
+@media screen and (max-width:360px) {
+  .responsive-subscribe{
+    font-size: 10vw !important;
+  }
+  .custome-size1{
+    font-size: 8vw !important;
+
+  }
+  .custome-size2{
+    font-size: 6vw !important;
+
+  }
+  .media-center{
+    display: flex;
+    justify-content: center;
+  }
+}
