--- a/mlefrontend/public/style.css
+++ b/mlefrontend/public/style.css
@@ -4075,8 +4075,8 @@ ul.h-list li:hover a {
   padding-left: 0px;
 }
 .btn-success.loginbtn {
-  background-color: #e12503;
-  border-color: #e12503;
+  background-color: #3cb690;
+  border-color: #3cb690;
 }
 .lock-inner i {
   font-size: 60px;
